# zork-bench

./: .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
benchmark/: analyze.py  leaderboard.py  run_benchmark.sh
benchmark/results/: benchmark_results.csv
benchmark/results/claude-sonnet-4-6/explore/: session_20260407T145956Z.jsonl  session_20260407T145956Z.txt
benchmark/results/claude-sonnet-4-6/full/: session_20260407T150026Z.jsonl  session_20260407T150026Z.txt
benchmark/results/claude-sonnet-4-6/none/: session_20260407T145935Z.jsonl  session_20260407T145935Z.txt  session_20260407T152805Z.jsonl  session_20260407T152805Z.txt  session_20260412T135923Z.jsonl
benchmark/results/cogito-671b/explore/: session_20260417T055134Z.jsonl  session_20260417T055134Z.txt
benchmark/results/cogito-671b/full/: session_20260417T055135Z.jsonl  session_20260417T055135Z.txt
benchmark/results/cogito-671b/none/: session_20260417T055132Z.jsonl  session_20260417T055132Z.txt
benchmark/results/deepseek-v3p2/explore/: session_20260417T055053Z.jsonl  session_20260417T055053Z.txt
benchmark/results/humans/: session_20260401T165224Z.jsonl  session_20260401T191508Z.jsonl  session_20260401T191715Z.jsonl  session_20260401T191754Z.jsonl
src/zork_harness/: agent.py  calibrate_map.py  dashboard.py  human_player.py  logger.py  map_coords.py  map_data.py  map_viewer.py  session.py  tools.py  treasures.py
tests/: conftest.py  test_command_extraction.py  test_logger_schema.py  test_resilience.py  test_room_tracker.py  test_score_parsing.py  test_tool_registry.py  test_treasures.py
(+56 files in other folders)
