[project]
name = "zork-harness"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pexpect>=4.9",
    "anthropic>=0.52",
    "pillow>=12.1.1",
    "openai>=2.30.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
zork-harness = "zork_harness.agent:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that replay full sessions; slower than unit tests",
]
